Updated README with SLA breach system, dynamic SLA logic, and scheduler details, DashBoard