@@ -5,63 +5,64 @@ import com.vamsi.incident_management.dto.CommentResponse;
 import com.vamsi.incident_management.entity.Incident;
 import com.vamsi.incident_management.entity.IncidentComment;
 import com.vamsi.incident_management.entity.User;
-import com.vamsi.incident_management.repository.IncidentRepository;
+import com.vamsi.incident_management.exception.ResourceNotFoundException;
 import com.vamsi.incident_management.repository.IncidentCommentRepository;
+import com.vamsi.incident_management.repository.IncidentRepository;
 import com.vamsi.incident_management.repository.UserRepository;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class IncidentCommentService {
 
-    @Autowired
-    private IncidentRepository incidentRepository;
+    private final IncidentRepository incidentRepository;
+    private final IncidentCommentRepository commentRepository;
+    private final UserRepository userRepository;
 
-    @Autowired
-    private IncidentCommentRepository commentRepository;
+    // ================= ADD COMMENT =================
+    public IncidentComment addComment(Long incidentId, CommentRequest request, String username) {
 
-    @Autowired
-    private UserRepository userRepository;
-
-    // ✅ ADD COMMENT
-    public IncidentComment addComment(CommentRequest request) {
-
-        if (request.getIncidentId() == null) {
-            throw new RuntimeException("Incident ID cannot be null");
+        if (incidentId == null) {
+            throw new IllegalArgumentException("Incident ID cannot be null");
         }
 
-        if (request.getComment() == null || request.getComment().isBlank()) {
-            throw new RuntimeException("Comment cannot be empty");
+        if (request.getMessage() == null || request.getMessage().trim().isEmpty()) {
+            throw new IllegalArgumentException("Comment message cannot be empty");
         }
 
-        // Fetch incident
-        Incident incident = incidentRepository.findById(request.getIncidentId())
-                .orElseThrow(() -> new RuntimeException("Incident not found with ID: " + request.getIncidentId()));
+        // Fetch Incident
+        Incident incident = incidentRepository.findById(incidentId)
+                .orElseThrow(() -> new ResourceNotFoundException("Incident", "id", incidentId));
 
-        // Temporary user (replace with JWT later)
-        User user = userRepository.findById(1L)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        // Fetch User (from logged-in username)
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "username", username));
 
-        // Create comment
-        IncidentComment comment = new IncidentComment();
-        comment.setIncident(incident);
-        comment.setUser(user);
-        comment.setMessage(request.getComment());
+        // Create Comment
+        IncidentComment comment = IncidentComment.builder()
+                .incident(incident)
+                .user(user)
+                .message(request.getMessage().trim())
+                .createdAt(LocalDateTime.now())
+                .build();
 
         return commentRepository.save(comment);
     }
 
-    // ✅ GET COMMENTS BY INCIDENT (DTO response)
+    // ================= GET COMMENTS =================
     public List<CommentResponse> getCommentsByIncident(Long incidentId) {
 
         if (incidentId == null) {
-            throw new RuntimeException("Incident ID cannot be null");
+            throw new IllegalArgumentException("Incident ID cannot be null");
         }
 
-        return commentRepository.findByIncidentIdOrderByCreatedAtAsc(incidentId)
+        return commentRepository.findByIncidentIdOrderByCreatedAtDesc(incidentId)
                 .stream()
                 .map(comment -> CommentResponse.builder()
                         .id(comment.getId())
